examples/bad/syntax1.swifty
//missing block after if in if-else
if (true)
	print 1
else
	print 0
